client/scss/events.scss
.filters-container {
  margin-top: 300px;
  margin-bottom: $baseLine;
  font-size: $fontSizeSmall;

  #keyword-filter {
    width: 100%;
  }

  .select-fields {
    & > * {
      width: 22%;
      float: left;
      margin-left: 4%;

      &:first-child {
        margin-left: 0;
      }
    }
  }

  select {
    height: $baseLine + ($baseLine / 3);
    padding: ($baseLine / 6)  ($baseLine / 3);
    background: transparent;
    border: 1px solid #d3d3d3;
  }
}

.event-list {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

li.event {
  background: #fff;
  padding: ($baseLine / 2) 20px;

  &:nth-child(even) {
    background: darken(#fff, 3%);
  }

  .event-info {
    padding-top: 2px;
  }

  .event-name {
    font-weight: bold;
    font-size: 18px;
    text-decoration: none;
  }

  .event-description {
    p {
      margin: 0;
      font-size: $fontSizeSmall;
    }
  }
}

.event-areas {
  font-size: $fontSizeSmallest;
  @include clearfix;
  margin-top: 2px;

  .event-area {
    float: left;
    color: #fff;
    overflow: hidden;
    height: $baseLine;
    text-align: center;
    @include transition(200ms width ease);
  }

  &[class*=" count-"]:hover .event-area {
    width: 0%;
  }

  &[class*=" count-"]:hover .event-area:hover {
    width: 100%;
  }

  &.count-1 .event-area { width: percentage(1/1); }
  &.count-2 .event-area { width: percentage(1/2); }
  &.count-3 .event-area { width: percentage(1/3); }
  &.count-4 .event-area { width: percentage(1/4); }
  &.count-5 .event-area { width: percentage(1/5); }
  &.count-6 .event-area { width: percentage(1/6); }
  &.count-7 .event-area { width: percentage(1/7); }
  &.count-8 .event-area { width: percentage(1/8); }
  &.count-9 .event-area { width: percentage(1/9); }
  &.count-10 .event-area { width: percentage(1/10); }

  .event-area.blue { background: $flat-blue-1; }
  .event-area.red { background: $flat-red-1; }
  .event-area.orange { background: $flat-orange-1; }
  .event-area.green { background: $flat-green-3; }
  .event-area.yellow { background: $flat-yellow-1; }
  .event-area.purple { background: $flat-purple-1; }
  .event-area.gray { background: $flat-gray-3; }
}

.event-header {
  margin-top: $baseLine * 4;
  float: left;

  h2 {
    margin: 0;
    padding-top: 10px;
  }
}

.event-list,
.event-header {
  .event-date {
    @include clearfix;
    padding-top: 3px;

    .day,
    .monthyear {
      float: left;
      width: 50%;
      font-weight: 600;
      color: $textColorLight;
      text-align: center;
    }

    .day {
      font-size: 48px;
      line-height: 48px;
    }

    .monthyear {
      line-height: 1;
    }

    .month {
      font-size: 24px;
      text-transform: uppercase;
    }

    .year {
      font-size: 22px;
    }
  }

  .event-space {
    font-size: $fontSizeSmaller;
    text-align: center;
    font-weight: bold;
    color: $textColorSecondary;
  }
}

.event-content {
  .space-photo img {
    display: block;
    max-width: 100%;
  }

  h4 {
    margin-top: 0;
  }

  h4 + h4 {
    margin-top: 1.33em;
  }

  .button-group {
    margin-top: $baseLine;
  }
}

